--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8086
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/activiti_6?useUnicode=true&characterEncoding=utf-8&useSSL=false
